--- a/premedia/infosys/chairmans-statement.html
+++ b/premedia/infosys/chairmans-statement.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
-	<title> Infosys | Annual Report 2020</title>
+	<title>Chairman's Report | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
@@ -57,7 +57,7 @@
 				<div class="category-label mt-md-5 mt-2">Chairman's statement</div>
 				<h1 class="bg-theme-blue text-white font-weight-bold p-3 my-3">Thinking Resilience. Thinking Scale.</h1>
 				<div class="image-container my-5">
-					<img class="img-fluid" src="img/Nandan-Nilekani.jpg">
+					<img class="img-fluid" src="img/HD/Nandan-Nilekani.jpg">
 					<div class="blockquote p-4 my-5 d-none d-lg-block">
 						<p class="font-theme-blue my-0">
 							The task is to build systems that can quickly scale and evolve to serve the changing needs of the enterprise and its workforce. That is the thinking that guides us as we navigate our clients to respond intuitively to opportunities, and help build value chains that are both efficient and robust to deal with unexpected challenges. That is the resilience our clients seek. That is Live Enterprise.
