--- a/premedia/infosys/live-enterprise/intuition.html
+++ b/premedia/infosys/live-enterprise/intuition.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
-	<title> Intution | Live Enterprise | Annual Report 2020</title>
+	<title>Intution | Live Enterprise | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.min.css">
@@ -13,7 +13,7 @@
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
 			<a class="search" href="#"><img src="../img/search.svg"></a>
-			<a href="index.html"><img src="../img/infosys.svg"></a>
+			<a href="../index.html"><img src="../img/infosys.svg"></a>
 		</div>
 		<div id="navigation" class="bg-white fixed-top">
 			<button class="bg-white">&times;</button>
@@ -81,9 +81,9 @@
 					</p>
 
 					<div class="image-container">
-						<img class="img-fluid h-100 d-block mx-auto" src="../img/intuition1.png">
+						<img class="img-fluid h-100 d-block mx-auto" src="../img/HD/Intuition1.png">
 						<div class="floating-image d-none d-lg-block">
-							<img class="img-fluid" src="../img/intuition2.png">
+							<img class="img-fluid" src="../img/Intuition2.png">
 						</div>
 					</div>
 
@@ -92,7 +92,7 @@
 					</p>
 
 					<div class="image-container d-lg-none">
-						<img class="img-fluid w-75 d-block mx-auto my-4" src="../img/intuition2.png">
+						<img class="img-fluid w-75 d-block mx-auto my-4" src="../img/HD/Intuition2.png">
 					</div>
 
 					<p>
@@ -111,7 +111,7 @@
 							<div class="category-label mb-1">Mohammed Rafee Tarafdar</div>
 							<div>SVP – Unit Technology Officer</div>
 						</div>
-						<img src="../img/intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
+						<img src="../img/Intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 
@@ -134,7 +134,7 @@
 					</p>
 
 					<div class="image-container">
-						<img class="img-fluid" src="../img/intuition4.jpg">
+						<img class="img-fluid" src="../img/HD/Intuition4.jpg">
 					</div>
 
 					<p>
@@ -153,7 +153,7 @@
 							<div class="category-label mb-1">Balakrishna D.R.</div>
 							<div>SVP – Head, AI & Automation Services</div>
 						</div>
-						<img src="../img/intuition5.png" class="img-fluid rounded-circle mr-5" alt="...">
+						<img src="../img/HD/Intuition5.png" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 			</div>
