add intuition to homepage, scroll snapping

--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -60,8 +60,10 @@
 			<div class="row no-gutters">
 				<div id="instincts" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
 					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
-						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
-						<h2 class="title">Next-level instincts, intelligence,  and intuition.</h2>
+						<a class="text-decoration-none text-white" href="live-enterprise/intuition.html">
+							<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
+							<h2 class="title">Next-level instincts, intelligence,  and intuition.</h2>
+						</a>
 					</div>
 				</div>
 				<div id="responding" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
