click outside navbar to close, fix homepage people shadows, change collapsed nav-item active colour

--- a/premedia/infosys/live-enterprise/intuition.html
+++ b/premedia/infosys/live-enterprise/intuition.html
@@ -134,7 +134,7 @@
 					</p>
 
 					<div class="image-container">
-						<img class="img-fluid" src="../img/HD/Intuition4.jpg">
+						<img class="img-fluid" src="../img/HD/Intuition4.png">
 					</div>
 
 					<p>
