--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -90,7 +90,7 @@
 		</div>
 		<div id="people" class="text-white scroll-stop">
 			<div class="row no-gutters vh-100">
-				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end bg-primary">
+				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end">
 					<a href="chairmans-statement.html" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
 						<div class="category-label">Chairman's message</div>
 						<h2>Thinking Resilience. Thinking Scale.</h2>
@@ -98,7 +98,7 @@
 						<div class="arrow">&xrarr;</div>
 					</a>
 				</div>
-				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end bg-danger">
+				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end">
 					<a href="#" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
 						<div class="category-label">Letter to the Shareholder</div>
 						<h2>An exceptional year for Infosys</h2>
