--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -15,13 +15,13 @@
 			<a class="search" href="#"><img src="img/search.svg"></a>
 			<a href="index.html"><img src="img/infosys.svg"></a>
 		</div>
-		<div id="navigation" class="bg-white fixed-top">
+		<div id="navigation" class="bg-white fixed-top accordion">
 			<button class="bg-white">&times;</button>
 			<nav class="nav flex-column py-5 mt-5">
 				<a class="nav-link active" href="index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_live_enterprise">That’s Live Enterprise</a>
-				<div class="collapse" id="nav_live_enterprise">
+				<div class="collapse" id="nav_live_enterprise" data-parent="#navigation">
 					<div class="nav flex-column">
 						<a class="nav-link" href="live-enterprise/intuition.html">Intuitive Decisions</a>
 						<a class="nav-link" href="#">Building responsive value chains</a>
@@ -32,16 +32,16 @@
 				<a class="nav-link" href="chairmans-statement.html">Chairman’s Statement</a>
 				<a class="nav-link" href="#">Letter to the Shareholder</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_infosys_team">The Infosys Team</a>
-				<div class="collapse" id="nav_infosys_team">
+				<div class="collapse" id="nav_infosys_team" data-parent="#navigation">
 					<div class="nav flex-column">
 						<a class="nav-link" href="#">Board of Directors</a>
 						<a class="nav-link" href="#">Leadership Team</a>
 					</div>
 				</div>
-				<a class="nav-link" data-toggle="collapse" href="#">Awards and Recognition</a>
-				<a class="nav-link" data-toggle="collapse" href="#">Key Trends</a>
-				<a class="nav-link" data-toggle="collapse" href="#">Year at a Glance</a>
-				<a class="nav-link" href="#">Downloads</a>
+				<a class="nav-link" href="#">Awards and Recognition</a>
+				<a class="nav-link" href="#">Key Trends</a>
+				<a class="nav-link" href="#">Year at a Glance</a>
+				<a class="nav-link" href="downloads.html">Downloads</a>
 			</nav>
 		</div>
 	</div>
@@ -155,6 +155,39 @@
 						<h4 class="font-weight-bold">Number of employees</h4>
 						<div class="key">&nbsp;</div>
 						<h1 class="font-weight-bold">2,42,371</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer bg-theme-blue text-white py-5 px-2 scroll-stop">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-2 py-3">
+						<img src="img/infosys.svg">
+					</div>
+					<div class="col-md-4 py-3">
+						<h5 class="text-uppercase font-weight-bold">Annual Report</h5>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Investor Contacts</a></div>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Information at a Glance</a></div>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Instructions for Participation through VC</a></div>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Notice of the 39th Annual General Meeting</a></div>
+					</div>
+					<div class="col-md-3 py-3">
+						<h5 class="text-uppercase font-weight-bold">Company</h5>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Investors</a></div>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Careers</a></div>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Newsroom</a></div>
+						<div class="py-2"><a class="text-white font-smaller" href="#">Contact Us</a></div>
+					</div>
+					<div class="col-md-3 py-3">
+						<h5 class="text-uppercase font-weight-bold">Connect With Us</h5>
+						<div class="d-flex justify-content-between align-items-center flex-wrap w-lg-75 w-md-100 w-sm-50 w-75">
+							<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/linkedin.png"></a>
+							<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/instagram.png"></a>
+							<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/facebook.png"></a>
+							<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/youtube.png"></a>
+							<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/twitter.png"></a>
+						</div>
 					</div>
 				</div>
 			</div>
