key trends, misc changes

--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -17,7 +17,7 @@
 		</div>
 		<div id="navigation" class="bg-white fixed-top accordion">
 			<button class="bg-white">&times;</button>
-			<nav class="nav flex-column py-5 mt-5">
+			<nav class="nav flex-column py-2">
 				<a class="nav-link active" href="index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link" data-toggle="collapse" href="#nav_live_enterprise">That’s Live Enterprise</a>
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<a class="nav-link" href="#">Awards and Recognition</a>
-				<a class="nav-link" href="#">Key Trends</a>
+				<a class="nav-link" href="keytrends.html">Key Trends</a>
 				<a class="nav-link" href="#">Year at a Glance</a>
 				<a class="nav-link" href="downloads.html">Downloads</a>
 			</nav>
@@ -93,7 +93,7 @@
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end">
 					<a href="chairmans-statement.html" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
 						<div class="category-label">Chairman's message</div>
-						<h2>Thinking Resilience. Thinking Scale.</h2>
+						<h2 class="font-weight-normal">Thinking Resilience. Thinking Scale.</h2>
 						<div class="category-label font-weight-bold">Nandan M. Nilekani</div>
 						<div class="arrow">&xrarr;</div>
 					</a>
@@ -101,7 +101,7 @@
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end">
 					<a href="#" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
 						<div class="category-label">Letter to the Shareholder</div>
-						<h2>An exceptional year for Infosys</h2>
+						<h2 class="font-weight-normal">An exceptional year for Infosys</h2>
 						<div class="category-label font-weight-bold">Salil Parekh</div>
 						<div class="arrow">&xrarr;</div>
 					</a>
