--- a/premedia/infosys/live-enterprise/intuition.html
+++ b/premedia/infosys/live-enterprise/intuition.html
@@ -17,7 +17,7 @@
 		</div>
 		<div id="navigation" class="bg-white fixed-top accordion">
 			<button class="bg-white">&times;</button>
-			<nav class="nav flex-column py-5 mt-5">
+			<nav class="nav flex-column py-2">
 				<a class="nav-link" href="../index.html">Home</a>
 				<a class="nav-link" href="#">Being Resilient</a>
 				<a class="nav-link active" data-toggle="collapse" aria-expanded="true" href="#nav_live_enterprise">That’s Live Enterprise</a>
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<a class="nav-link" href="#">Awards and Recognition</a>
-				<a class="nav-link" href="#">Key Trends</a>
+				<a class="nav-link" href="../keytrends.html">Key Trends</a>
 				<a class="nav-link" href="#">Year at a Glance</a>
 				<a class="nav-link" href="../downloads.html">Downloads</a>
 			</nav>
@@ -159,7 +159,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer bg-theme-blue text-white py-5 px-2">
+	<div class="footer bg-theme-blue text-white py-5 px-2 mt-5">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2 py-3">
