--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
-	<div class="navbar navbar-dark fixed-top">
+	<div class="navbar navbar-dark bg-theme-blue-on-mobile fixed-top hide-on-scroll px-md-3 scrolling-up">
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
 			<a class="search" href="#"><img src="img/search.svg"></a>
-			<a href="index.html"><img src="img/infosys.svg"></a>
+			<a class="pr-md-2 pl-2" href="index.html"><img src="img/infosys.svg"></a>
 		</div>
 		<div id="navigation" class="bg-white fixed-top accordion">
 			<button class="bg-white">&times;</button>
@@ -49,8 +49,8 @@
 		<div id="hero" class="vh-100 vw-100 bg-theme-dark-blue bg-img-bottom-right scroll-stop">
 			<div class="d-flex justify-content-around h-100">
 				<div class="w-50-md d-flex flex-column justify-content-center h-100 text-white">
-					<h2>Being Resilient.</h2>
-					<h1 class="mb-4 font-weight-bold">That’s Live Enterprise.</h1>
+					<h2 class="mb-md-4 mb-1">Being Resilient.</h2>
+					<h1 class="mb-4 font-weight-bold font-smaller-on-mobile">That’s Live Enterprise.</h1>
 					<div class="category-label">Annual report 2019-2020</div>
 				</div>
 				<div></div>
