add homepage effects

--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -133,28 +133,28 @@
 					<div class="text-center">
 						<h4 class="font-weight-bold">Free cash flow</h4>
 						<div class="key text-white">(in crores)</div>
-						<h1 class="font-weight-bold">15,250</h1>
+						<h1 id="figure1" data-num="15250" class="font-weight-bold">0</h1>
 					</div>
 				</div>
 				<div class="col-md-3 vh-25 vh-md-30 d-flex justify-content-center align-items-center">
 					<div class="text-center">
 						<h4 class="font-weight-bold">Dividend per share</h4>
 						<div class="key">&nbsp;</div>
-						<h1 class="font-weight-bold rupee">17.50</h1>
+						<h1 id="figure2" data-num="17.50" class="font-weight-bold rupee">0.00</h1>
 					</div>
 				</div>
 				<div class="col-md-3 vh-25 vh-md-30 bg-theme-blue d-flex justify-content-center align-items-center">
 					<div class="text-center">
 						<h4 class="font-weight-bold">Number of clients</h4>
 						<div class="key">&nbsp;</div>
-						<h1 class="font-weight-bold">1,411</h1>
+						<h1 id="figure3" data-num="1411" class="font-weight-bold">0</h1>
 					</div>
 				</div>
 				<div class="col-md-3 vh-25 vh-md-30 d-flex justify-content-center align-items-center">
 					<div class="text-center">
 						<h4 class="font-weight-bold">Number of employees</h4>
 						<div class="key">&nbsp;</div>
-						<h1 class="font-weight-bold">2,42,371</h1>
+						<h1 id="figure4" data-num="242371" class="font-weight-bold">0</h1>
 					</div>
 				</div>
 			</div>
@@ -194,7 +194,9 @@
 		</div>
 	</div>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
+	<script type="text/javascript">
+	</script>
 </body>
 </html>
