--- a/premedia/infosys/keytrends.html
+++ b/premedia/infosys/keytrends.html
@@ -133,7 +133,7 @@
 				<div id="clients" class="ct-chart ct-perfect-fifth"></div>
 			</div>
 		</div> -->
-	</div>
+	<!-- </div> -->
 	<div id="tooltip"></div>
 	<div class="footer bg-theme-blue mt-5 text-white py-5 px-2">
 		<div class="container">
