--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
 	<title>Infosys | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/aos.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
-	<div class="navbar navbar-dark bg-theme-blue-on-mobile fixed-top hide-on-scroll px-md-3 scrolling-up">
+	<div class="navbar navbar-dark bg-theme-blue-on-mobile fixed-top hide-on-scroll px-md-3 scrolling-up vw-100">
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
 			<a class="search" href="#"><img src="img/search.svg"></a>
@@ -48,7 +49,7 @@
 	<div class="homepage-wrapper">
 		<div id="hero" class="vh-100 vw-100 bg-theme-dark-blue bg-img-bottom-right scroll-stop">
 			<div class="d-flex justify-content-around h-100">
-				<div class="w-50-md d-flex flex-column justify-content-center h-100 text-white">
+				<div data-aos="zoom-in" class="w-50-md d-flex flex-column justify-content-center h-100 text-white">
 					<h2 class="mb-md-4 mb-1">Being Resilient.</h2>
 					<h1 class="mb-4 font-weight-bold font-smaller-on-mobile">That’s Live Enterprise.</h1>
 					<div class="category-label">Annual report 2019-2020</div>
@@ -57,9 +58,9 @@
 			</div>
 		</div>
 		<div id="live_enterprise" class="text-white scroll-stop">
-			<div class="row no-gutters">
+			<div class="row no-gutters" >
 				<div id="instincts" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
-					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
+					<div data-aos="fade-right" data-aos-anchor-placement="top-center" class="col-sm-6 col-md-9 col-lg-6 m-2">
 						<a class="text-decoration-none text-white" href="live-enterprise/intuition.html">
 							<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 							<h2 class="title">Next-level instincts, intelligence,  and intuition.</h2>
@@ -67,7 +68,7 @@
 					</div>
 				</div>
 				<div id="responding" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
-					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
+					<div data-aos="fade-left" class="col-sm-6 col-md-9 col-lg-6 m-2">
 						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">Responding to opportunities with lightning-quick reflexes.</h2>
 					</div>
@@ -75,13 +76,13 @@
 			</div>
 			<div class="row no-gutters">
 				<div id="talent" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
-					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
+					<div data-aos="fade-right" class="col-sm-6 col-md-9 col-lg-6 m-2">
 						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">The talent to dream it, and the tech skills to do it.</h2>
 					</div>
 				</div>
 				<div id="checkmate" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
-					<div class="col-sm-6 col-md-9 col-lg-6 m-2">
+					<div data-aos="fade-left" class="col-sm-6 col-md-9 col-lg-6 m-2">
 						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">Staying ten steps ahead of demanding consumers. Checkmating competitors.</h2>
 					</div>
@@ -91,7 +92,7 @@
 		<div id="people" class="text-white scroll-stop">
 			<div class="row no-gutters vh-100">
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end">
-					<a href="chairmans-statement.html" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
+					<a href="chairmans-statement.html" data-aos="zoom-out-up"  class="pb-md-5 p-3 pb-2 text-white text-decoration-none">
 						<div class="category-label">Chairman's message</div>
 						<h2 class="font-weight-normal">Thinking Resilience. Thinking Scale.</h2>
 						<div class="category-label font-weight-bold">Nandan M. Nilekani</div>
@@ -99,7 +100,7 @@
 					</a>
 				</div>
 				<div class="col-md-6 h-50 h-md-100 d-flex flex-column justify-content-end">
-					<a href="#" class="pb-md-5 p-5 pb-2 text-white text-decoration-none">
+					<a href="#" data-aos="zoom-out-up" data-aos-delay="500" class="pb-md-5 p-3 pb-2 text-white text-decoration-none">
 						<div class="category-label">Letter to the Shareholder</div>
 						<h2 class="font-weight-normal">An exceptional year for Infosys</h2>
 						<div class="category-label font-weight-bold">Salil Parekh</div>
@@ -117,14 +118,14 @@
 					<div>
 						<h2 class="font-theme-blue font-weight-bold">Revenues</h2>
 						<div class="key text-body pb-3">(in crores)</div>
-						<img class="d-block img-fluid" src="img/Revenues.png">
+						<img data-aos="fade-right" class="d-block img-fluid" src="img/Revenues.png">
 					</div>
 				</div>
 				<div class="col-md-6 vh-60 p-5 d-flex justify-content-center align-items-center bg-theme-dark-blue">
 					<div>
 						<h2 class="text-white font-weight-bold">Net Profit</h2>
 						<div class="key text-white pb-3">(in crores)</div>
-						<img class="d-block img-fluid" src="img/Net-Profit.png">
+						<img data-aos="fade-left" class="d-block img-fluid" src="img/Net-Profit.png">
 					</div>
 				</div>
 			</div>
@@ -196,7 +197,5 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
-	<script type="text/javascript">
-	</script>
 </body>
 </html>
