--- a/premedia/infosys/downloads.html
+++ b/premedia/infosys/downloads.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
-	<div class="navbar navbar-dark bg-theme-blue fixed-top">
+	<div class="navbar navbar-dark bg-theme-blue fixed-top vw-100">
 		<button class="text-white bg-theme-blue">&#9776;</button>
 		<div class="navbar-header d-flex align-items-center">
 			<a class="search" href="#"><img src="img/search.svg"></a>
