--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -68,7 +68,7 @@
 					</div>
 				</div>
 				<div id="responding" class="col-md-6 vh-50 p-md-5 p-2 row no-gutters bg-img-bottom-right">
-					<div data-aos="fade-left" class="col-sm-6 col-md-9 col-lg-6 m-2">
+					<div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-sm-6 col-md-9 col-lg-6 m-2">
 						<div class="category-label mt-md-5 mt-2">Live Enterprise</div>
 						<h2 class="title">Responding to opportunities with lightning-quick reflexes.</h2>
 					</div>
