--- a/premedia/infosys/downloads.html
+++ b/premedia/infosys/downloads.html
@@ -127,7 +127,7 @@
 		</div>
 	</div>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
